--- a/index.html
+++ b/index.html
@@ -157,9 +157,34 @@
 		page-break-inside: avoid;
 		}
 		}
-		.container div {
-		height: 400px;
-		overflow: auto;
+
+		#scroller-test {
+    		height: 400px;
+		}
+		table {
+		    display: flex;
+		    flex-flow: column;
+		    height: 100%;
+		    width: 100%;
+		}
+		table thead {
+		    /* head takes the height it requires, 
+		    and it's not scaled when table is resized */
+		    flex: 0 0 auto;
+		    width: calc(100% - 0.9em);
+		}
+		table tbody {
+		    /* body takes all the remaining available space */
+		    flex: 1 1 auto;
+		    display: block;
+		    overflow-y: scroll;
+		}
+		table tbody tr {
+		    width: 100%;
+		}
+		table thead, table tbody tr {
+		    display: table;
+		    table-layout: fixed;
 		}
 
 		</style>
@@ -171,55 +196,59 @@
 				<div id="scroller-test" role="region" aria-labelledby="Cap1" tabindex="0">
 					<table id="books">
 						<!-- <caption id="Cap1">Livros que eu posso ou não ter lido / Books I May or May Not Have Read</caption> -->
-						<tr>
-							<th>Autor</th>
-							<th>Titulo</th>
-							<th>Ano</th>
-							<th>X-13</th>
-							<th>X-10</th>
-						</tr>
-						<tr>
-							<td>Miguel De Cervantes</td>
-							<td>The Ingenious Gentleman Don Quixote of La Mancha</td>
-							<td>1605</td>
-							<td>9783125798502</td>
-							<td>3125798507</td>
-						</tr>
-						<tr>
-							<td>Mary Shelley</td>
-							<td>Frankenstein; or, The Modern Prometheus</td>
-							<td>1818</td>
-							<td>9781530278442</td>
-							<td>1530278449</td>
-						</tr>
-						<tr>
-							<td>Herman Melville</td>
-							<td>Moby-Dick; or, The Whale</td>
-							<td>1851</td>
-							<td>9781530697908</td>
-							<td>1530697905</td>
-						</tr>
-						<tr>
-							<td>Emma Dorothy Eliza Nevitte Southworth</td>
-							<td>The Hidden Hand</td>
-							<td>1888</td>
-							<td>9780813512969</td>
-							<td>0813512964</td>
-						</tr>
-						<tr>
-							<td>F. Scott Fitzgerald</td>
-							<td>The Great Gatsby</td>
-							<td>1925</td>
-							<td>9780743273565</td>
-							<td>0743273567</td>
-						</tr>
-						<tr>
-							<td>George Orwell</td>
-							<td>Nineteen Eighty-Four</td>
-							<td>1948</td>
-							<td>9780451524935</td>
-							<td>0451524934</td>
-						</tr>
+						<thead>
+							<tr>
+								<th>Autor</th>
+								<th>Titulo</th>
+								<th>Ano</th>
+								<th>X-13</th>
+								<th>X-10</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Miguel De Cervantes</td>
+								<td>The Ingenious Gentleman Don Quixote of La Mancha</td>
+								<td>1605</td>
+								<td>9783125798502</td>
+								<td>3125798507</td>
+							</tr>
+							<tr>
+								<td>Mary Shelley</td>
+								<td>Frankenstein; or, The Modern Prometheus</td>
+								<td>1818</td>
+								<td>9781530278442</td>
+								<td>1530278449</td>
+							</tr>
+							<tr>
+								<td>Herman Melville</td>
+								<td>Moby-Dick; or, The Whale</td>
+								<td>1851</td>
+								<td>9781530697908</td>
+								<td>1530697905</td>
+							</tr>
+							<tr>
+								<td>Emma Dorothy Eliza Nevitte Southworth</td>
+								<td>The Hidden Hand</td>
+								<td>1888</td>
+								<td>9780813512969</td>
+								<td>0813512964</td>
+							</tr>
+							<tr>
+								<td>F. Scott Fitzgerald</td>
+								<td>The Great Gatsby</td>
+								<td>1925</td>
+								<td>9780743273565</td>
+								<td>0743273567</td>
+							</tr>
+							<tr>
+								<td>George Orwell</td>
+								<td>Nineteen Eighty-Four</td>
+								<td>1948</td>
+								<td>9780451524935</td>
+								<td>0451524934</td>
+							</tr>
+						</tbody>
 					</table>
 				</div>
 				<p>
@@ -314,7 +343,7 @@
 			}
 		}
 
-		var listElm = document.querySelector('#scroller-test');
+		var listElm = document.querySelector('tbody');
 		// Detect when scrolled to bottom.
 		listElm.addEventListener('scroll', function() {
 			if (listElm.scrollTop + listElm.clientHeight >= listElm.scrollHeight) {
